--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,2 +1,4 @@
 # Menu path, menu title and class location of this plugin:
 Plugins>ImageJ on GPU (CLIJ2)>Custom,              "Add Scalar (CLIJ2)",                  org.uedalab.clijplugin.AddScalar
+Plugins>Geometry Points>launcher,                  "Geometry Points Tools",               org.uedalab.clijplugin.Geometry_Points_Tools
+Plugins>Geometry Points>geometry ui,               "Geometry Points UI",                  org.uedalab.clijplugin.Geometry_Points_UI
